# sdet-ai-handbook

./: .gitignore  README.md
examples/chrome-devtools-mcp/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/chrome-devtools-mcp/src/: demo.ts
examples/copilot-configuration/.github/prompts/: example-prompts.md
examples/copilot-configuration/.github/skills/: skills.md
microsoft/hello-world/: .env.example  .gitignore  main.py  pyproject.toml
